Fix styles in Languages and set attribute modal to not showing

--- a/react-demo/src/components/Languages.module.css
+++ b/react-demo/src/components/Languages.module.css
@@ -1,7 +1,7 @@
 .langButton {
   background-color: transparent;
   border: none;
-  color: white;
+  color: #ececec;
   font-size: 14px;
   cursor: pointer;
 }
